Migrations and fix missions views

--- a/missions_possible/templates/missions/index.html
+++ b/missions_possible/templates/missions/index.html
@@ -8,5 +8,5 @@
   {% endfor %}
   </ul>
   <br>
-  <a href="{% url 'missions:add_mission' %}">Create a New Mission</a>
+  <a>Create a New Mission</a>
 {% endblock %}
