Ability to create a new mission

--- a/missions_possible/templates/missions/index.html
+++ b/missions_possible/templates/missions/index.html
@@ -4,9 +4,9 @@
 {% block content %}
   <ul>
   {% for mission in mission_list %}
-    <li><a href="{% url 'missions:mission_detail' mission.id %}">{{ mission.name }}</a></li>
+    <li><a>{{ mission.name }}</a></li>
   {% endfor %}
   </ul>
   <br>
-  <a>Create a New Mission</a>
+  <a href="{% url 'missions:add_mission' %}">Create a New Mission</a>
 {% endblock %}
