--- a/missions_possible/templates/missions/mission_detail.html
+++ b/missions_possible/templates/missions/mission_detail.html
@@ -6,10 +6,14 @@
   <h3>Description: {{ object.description }}</h3>
   <br>
   <h3 class="title">Questions</h3>
-  {% for q in object.openendedquestion_set.all %}
-  <strong>{{ q.text }}</strong>
-  <a>Provide an Answer</a>
-  <br><br>
+  {% for q in object.question_set.all %}
+    <strong>{{ q.text }}</strong>
+    <br>
+    <a>Provide an Answer</a>
+    <br><br>
   {% endfor %}
+  <br>
+  <a href="{% url 'missions:add_question' mission_id=object.id %}">Add an Open Ended Question</a>
+  <br><br>
   <a href="{% url 'missions:index' %}">Back to All Missions</a>
 {% endblock %}
