--- a/missions_possible/templates/missions/add_answer.html
+++ b/missions_possible/templates/missions/add_answer.html
@@ -11,6 +11,6 @@
   <button type="submit">Submit Answer</button>
 </form>
 <br>
-<a href="{% url 'missions:index' %}">Nevermind, go back!</a>
+<a href="{% url 'missions:mission_detail' mission_id %}">Nevermind, go back!</a>
 
 {% endblock %}
