--- a/missions_possible/templates/missions/add_rating_answer.html
+++ b/missions_possible/templates/missions/add_rating_answer.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<h2 class="title">{{ rating_text }}</h2>
+<h2 class="title">{{ question_text }}</h2>
 <form action="{% url 'missions:add_rating_answer' question_id=question_id %}" method="post">
   {% csrf_token %}
   <input id="response" name="response" type="number" min="1" max="10" value="1"><br>
@@ -11,6 +11,6 @@
   <button type="submit">Submit Answer</button>
 </form>
 <br>
-<a href="{% url 'missions:index' %}">Nevermind, go back!</a>
+<a href="{% url 'missions:mission_detail' mission_id %}">Nevermind, go back!</a>
 
 {% endblock %}
